...
              ),
              unselectedLabelStyle: const TextStyle(fontSize: 12),
              items: [
                _navItem(
                  Icons.dashboard_rounded,
                  Icons.dashboard_outlined,
                  'Panel',
                ),
                _navItem(
                  Icons.explore_rounded,
                  Icons.explore_outlined,
                  'Keşfet',
                ),
...
                        Icons.grid_view_outlined,
                        'Platform',
                      ),
                _navItem(
                  Icons.person_rounded,
                  Icons.person_outline_rounded,
                  'Profil',
                ),
              ],
            );
          },
        ),
      ),
...
